# yandil

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  tox.ini
.github/workflows/: pythonapp.yml  release.yml
src/yadil/: container.py  dependency.py  dependency_filler.py  typing_tools.py
src/yadil/configuration/: configuration_container.py  environment.py
src/yadil/declarative/: decorators.py
src/yadil/discovery/: class_discovery.py
src/yadil/errors/: configuration_value_type_mismatch_error.py  missing_configuration_value_error.py  missing_type_hint_item_type_error.py  primary_dependency_not_found_error.py
src/yadil/loaders/: declarative_dependency_loader.py  self_discover_dependency_loader.py
src/yandil/: argument.py  container.py  dependency.py  dependency_filler.py
src/yandil/configuration/: configuration_container.py
src/yandil/declarative/: decorators.py
src/yandil/discovery/: class_discovery.py  class_feature_checks.py  module_discovery.py
src/yandil/errors/: abstract_class_not_allowed_error.py  dependency_not_found_error.py  instance_and_class_does_not_match_error.py  primary_dependency_already_defined_error.py
src/yandil/loaders/: declarative_dependency_loader.py  self_discover_dependency_loader.py
tests/: __init__.py
tests/integration/: test_container.py  test_dependency_filler.py
tests/integration/configuration/: test_configuration_container.py
tests/integration/discovery/: test_class_discovery.py  (+2 more)
tests/unit/: test_dependency.py  test_typing_tools.py
(+25 files in other folders)
