[tool.poetry]
name = "yandil"
version = "0.4.0"
description = "Yet ANother Dependency Injection Library"
readme = "README.md"
authors = ["DeejayRevok <seryi_one@hotmail.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/DeejayRevok/yandil"
homepage = "https://github.com/DeejayRevok/yandil"
keywords = ["dependency injection", "di"]

[tool.poetry.dependencies]
python = "~=3.10.0"

[tool.poetry.dev-dependencies]
black = "22.1.0"
coverage = "5.3"
flake8 = "3.8.4"
pytype = "2023.5.24"
tox = "3.20.1"
isort = "5.10.1"
commitizen = "3.3.0"

[tool.black]
line-length = 120
target-version = ['py310']
exclude = '''
/(
  | \.git
  | \.tox
)/
'''

[tool.isort]
profile = "black"
py_version=310
line_length = 120

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.4.0"
tag_format = "$version"
version_files = [
  "pyproject.toml:version"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytype]
pythonpath ='./src'
